--- a/src/resevertion.html
+++ b/src/resevertion.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     
-<script defer src="bundle.js"></script></head>
+</head>
 <body>
     <header>
         <h1 class="text-primary">webpack template</h1>
