--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                <form class="d-flex flex-column aligm-items-start col-10 col-lg-3">
                    <h3 class="text-center">Add a reservation</h3>
                    <input placeholder="Your name" type="text" name="your_name" id="your_name" required>
-                   <input placeholder="Start date" type="date" name="start" id="start" required>
-                   <input placeholder="End date" type="date" name="end" id="end" required>
-                   <button>Reserve</button>
+                   <input type="date" name="start" id="start" required>
+                   <input type="date" name="end" id="end" required>
+                   <button type="button">Reserve</button>
                </form>
            </div>
 
