--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
   </header>
   <main class="min-vh-100 p-2 container">
-    <div class="d-flex flex-wrap gap-3 justify-content-center films">
+    <div class="d-flex flex-wrap gap-4 py-4 justify-content-center films">
 
     </div>
   </main>
