--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <div class="modal d-none" tabindex="-1">
         <div class="modal-dialog modal-xl">
           <div class="modal-content border-5 rounded">
-            <div class="modal-header">
+            <div class="modal-header border-0">
               <button
                 type="button"
                 id="close-modal"
@@ -50,7 +50,7 @@
                 <p>03/12/2021 Alex: Love it!</p>
               </div>
             </div>
-            <div class="modal-footer border-1 border-dark d-block">
+            <div class="modal-footer d-block">
               <h3 class="mb-5 text-center">Add a comment</h3>
               <form class="w-25 m-auto">
                 <div class="mb-3">
