Change canvas to image & refactor showImage & add showTitle

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
               ></button>
             </div>
             <div class="modal-body">
-              <canvas class="w-100 h-25"></canvas>
+              <img src="" class="w-75 h-25 m-auto" alt="image" />
               <h2 class="modal-title text-center">Show Name</h2>
               <div class="show-info d-flex justify-content-around mt-4">
                 <div>
