Add showInfo & remove canvas scss

--- a/src/index.html
+++ b/src/index.html
@@ -59,16 +59,7 @@
             <div class="modal-body">
               <img src="" class="w-75 h-25 m-auto" alt="image" />
               <h2 class="modal-title text-center">Show Name</h2>
-              <div class="show-info d-flex justify-content-around mt-4">
-                <div>
-                  <h5>Show: Genre</h5>
-                  <h5>Show: Language</h5>
-                </div>
-                <div>
-                  <h5>Show: Rating</h5>
-                  <h5>Show: Runtime</h5>
-                </div>
-              </div>
+              <div class="info d-flex justify-content-around mt-4"></div>
               <div id="all-comments" class="mt-5 text-center">
                 <h3 class="mb-5">Comments(1)</h3>
                 <p>03/12/2021 Alex: Love it!</p>
