Add view for added comment & comment date & count of total comments

--- a/src/index.html
+++ b/src/index.html
@@ -61,8 +61,7 @@
               <h2 class="modal-title text-center">Show Name</h2>
               <div class="info d-flex justify-content-around mt-4"></div>
               <div id="all-comments" class="mt-5 text-center">
-                <h3 class="mb-5">Comments(1)</h3>
-                <p>03/12/2021 Alex: Love it!</p>
+                <h3 class="mb-5"></h3>
               </div>
             </div>
             <div class="modal-footer d-block">
