--- a/src/index.html
+++ b/src/index.html
@@ -1,122 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>webpack template</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main class="min-vh-100 p-2 container">
-    <div class="modal d-none" tabindex="-1">
-      <div class="modal-dialog modal-xl">
-        <div class="modal-content border-5 rounded">
-          <div class="modal-header border-0">
-            <button type="button" id="close-modal" class="btn-close btn-lg"></button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>webpack template</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+            </ul>
           </div>
-          <div class="modal-body">
-            <img src="" class="w-75 h-25 m-auto" alt="image" />
-            <h2 class="modal-title text-center">Show Name</h2>
-            <div class="info d-flex justify-content-around mt-4"></div>
-            <div id="all-comments" class="mt-5 text-center">
-              <h3 class="mb-5"></h3>
-              <ul></ul>
+        </div>
+      </nav>
+    </header>
+    <main class="min-vh-100 p-2 container">
+      <div class="modal d-none" tabindex="-1">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content border-5 rounded">
+            <div class="modal-header border-0">
+              <button
+                type="button"
+                id="close-modal"
+                class="btn-close btn-lg"
+              ></button>
             </div>
-          </div>
-          <div class="modal-footer d-block">
-            <h3 class="mb-5 text-center">Add a comment</h3>
-            <form class="w-25 m-auto">
-              <div class="mb-3">
-                <input type="text" class="form-control" placeholder="Your name" />
+            <div class="modal-body">
+              <img src="image" class="w-75 h-25 m-auto" alt="image" />
+              <h2 class="modal-title text-center">Show Name</h2>
+              <div class="info d-flex justify-content-around mt-4"></div>
+              <div id="all-comments" class="mt-5 text-center">
+                <h3 class="mb-5">Show Name</h3>
+                <ul></ul>
               </div>
-              <div class="mb-3">
-                <div class="input-group">
-                  <textarea class="form-control" aria-label="With textarea" placeholder="Your insights"></textarea>
+            </div>
+            <div class="modal-footer d-block">
+              <h3 class="mb-5 text-center">Add a comment</h3>
+              <form class="w-25 m-auto">
+                <div class="mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your name"
+                  />
                 </div>
-              </div>
-              <button type="submit" class="btn btn-secondary">Comment</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="d-flex flex-wrap gap-4 py-4 justify-content-center films">
-    </div>
-    <!-- Modal Reservation -->
-    <div class="modal fade" id="modalreservation" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close close-reservation" data-bs-dismiss="modal"
-              aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class=" d-flex flex-column align-items-center">
-              <div class="image-reservation d-flex justify-content-center  py-4"><img src="images/space1.jpg"
-                  class="img-fluid" alt=""></div>
-              <h2 class="p-3 reservation-title">Space 3</h2>
-              <div class="description justify-content-center  d-flex">
-                <ul class="p-5">
-                  <li class="name-movie">Fuel: titanium</li>
-                  <li class="language">Length: 100,000</li>
-                </ul>
-                <ul class="p-5">
-                  <li class="rating">Weight: 400</li>
-                  <li class="type">Power: 100,000,000</li>
-                </ul>
-              </div>
-              <h2 class="m-5"><strong>Summary:</strong></h2>
-              <p class="description-movie p-5"></p>
-              <div class="reservations">
-                <h3 class="p-3">Reservations (2)</h3>
-                <p>03/11/2021 - 03/12/2021 by Alex</p>
-                <p>03/11/2021 - 03/12/2021 by Alex</p>
-              </div>
-              <form class="d-flex flex-column aligm-items-start">
-                <h3 class="text-center">Add a reservation</h3>
-                <input placeholder="Your name" type="text" name="your_name" id="your_name" required>
-                <input type="date" name="start" id="start" required>
-                <input type="date" name="end" id="end" required>
-                <button type="button">Reserve</button>
+                <div class="mb-3">
+                  <div class="input-group">
+                    <textarea
+                      class="form-control"
+                      aria-label="With textarea"
+                      placeholder="Your insights"
+                    ></textarea>
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-secondary">Comment</button>
               </form>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer class="text-center bg-dark text-light py-2">
-    <p>2021 &copy; All copyrights reserved.</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/27e53b408d.js" crossorigin="anonymous"></script>
-</body>
+      <div
+        class="d-flex flex-wrap gap-4 py-4 justify-content-center films"
+      ></div>
+      <!-- Modal Reservation -->
+      <div
+        class="modal fade"
+        id="modalreservation"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+                type="button"
+                class="btn-close close-reservation"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class=" d-flex flex-column align-items-center">
+                <div
+                  class="image-reservation d-flex justify-content-center  py-4"
+                >
+                  <img src="images/space1.jpg" class="img-fluid" alt="" />
+                </div>
+
+                <h2 class="p-3 reservation-title">Space 3</h2>
+                <div class="description justify-content-center  d-flex">
+                  <ul class="p-5">
+                    <li class="name-movie">Fuel: titanium</li>
+                    <li class="language">Length: 100,000</li>
+                  </ul>
+                  <ul class="p-5">
+                    <li class="rating">Weight: 400</li>
+                    <li class="type">Power: 100,000,000</li>
+                  </ul>
+                </div>
+                <h2 class="m-5"><strong>Summary:</strong></h2>
+                <p class="description-movie p-5"></p>
+                <div class="reservations">
+                  <h3 class="p-3">Reservations (2)</h3>
+                  <p>03/11/2021 - 03/12/2021 by Alex</p>
+                  <p>03/11/2021 - 03/12/2021 by Alex</p>
+                </div>
+                <form class="d-flex flex-column aligm-items-start">
+                  <h3 class="text-center">Add a reservation</h3>
+                  <input
+                    placeholder="Your name"
+                    type="text"
+                    name="your_name"
+                    id="your_name"
+                    required
+                  />
+                  <input type="date" name="start" id="start" required />
+                  <input type="date" name="end" id="end" required />
+                  <button type="button">Reserve</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="text-center bg-dark text-light py-2">
+      <p>2021 &copy; All copyrights reserved.</p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/27e53b408d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
