Add another genre

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,15 @@
             <li class="nav-item">
               <a class="nav-link">Sports</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link">Science Fiction</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Family</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Supernatural</a>
+            </li>
           </ul>
         </div>
       </div>
