Make loading animation

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,11 @@
     </nav>
   </header>
   <main class="min-vh-100 p-2 container">
-    <div class="loading d-none text-center display-2 fw-bold">Loading...</div>
-    <div class="text-center display-6 fw-bold d-none numbers-text">Numbers: <span class="numbers">0</span></div>
+    <div class="loading min-vh-100 d-flex justify-content-center align-items-center">
+      <div class="loader text-center display-2 fw-bold"></div>
+    </div>
+    <div class="text-center display-6 fw-bold d-none numbers-text">Numbers of shows: <span class="numbers">0</span>
+    </div>
     <div class="modal d-none" tabindex="-1">
       <div class="modal-dialog modal-xl">
         <div class="modal-content border-5 rounded">
