--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,15 @@
               ></button>
             </div>
             <div class="modal-body">
-              <img src="" class="w-75 h-25 m-auto" alt="image" />
+              <img
+                src="https://via.placeholder.com/700x400.png"
+                class="w-75 h-25 m-auto"
+                alt="image"
+              />
               <h2 class="modal-title text-center">Show Name</h2>
               <div class="info d-flex justify-content-around mt-4"></div>
               <div id="all-comments" class="mt-5 text-center">
-                <h3 class="mb-5"></h3>
+                <h3 class="mb-5">Loading...</h3>
                 <ul></ul>
               </div>
             </div>
