Change all comments header tag

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
               <h2 class="modal-title text-center">Show Name</h2>
               <div class="info d-flex justify-content-around mt-4"></div>
               <div id="all-comments" class="mt-5 text-center">
-                <h3 class="mb-5">Loading...</h3>
+                <p class="h3 mb-5"></p>
                 <ul></ul>
               </div>
             </div>
