Add count test & refactor countComment and showComment

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
               <div class="info d-flex justify-content-around mt-4"></div>
               <div id="all-comments" class="mt-5 text-center">
                 <p class="h3 mb-5"></p>
-                <ul></ul>
+                <ul id="comment-list"></ul>
               </div>
             </div>
             <div class="modal-footer d-block">
