--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     </nav>
   </header>
   <main class="min-vh-100 p-2 container">
-    <div class="loading d-none text-center display-2 fw-bold">Loading...</div>
-    <div class="text-center display-6 fw-bold d-none numbers-text">Numbers: <span class="numbers">0</span></div>
+    <div class="loading min-vh-100 d-flex justify-content-center align-items-center">
+      <div class="loader text-center display-2 fw-bold"></div>
+    </div>
+    <div class="text-center display-6 fw-bold d-none numbers-text">Numbers of shows: <span class="numbers">0</span>
+    </div>
     <div class="modal d-none" tabindex="-1">
       <div class="modal-dialog modal-xl">
         <div class="modal-content border-5 rounded">
@@ -54,11 +57,11 @@
             <button type="button" id="close-modal" class="btn-close btn-lg"></button>
           </div>
           <div class="modal-body">
-            <img src="image" class="w-75 h-25 m-auto" alt="image" />
+            <img src="https://via.placeholder.com/700x400.png" class="w-75 h-25 m-auto" alt="image" />
             <h2 class="modal-title text-center">Show Name</h2>
             <div class="info d-flex justify-content-around mt-4"></div>
             <div id="all-comments" class="mt-5 text-center">
-              <h3 class="mb-5">Show Name</h3>
+              <h3 class="mb-5">Loading...</h3>
               <ul></ul>
             </div>
           </div>
@@ -107,17 +110,16 @@
               </div>
               <h2 class="m-5"><strong>Summary:</strong></h2>
               <p class="description-movie p-5"></p>
+              <h3 class="p-3 reservation-count">Reservations (2)</h3>
               <div class="reservations">
-                <h3 class="p-3">Reservations (2)</h3>
-                <p>03/11/2021 - 03/12/2021 by Alex</p>
-                <p>03/11/2021 - 03/12/2021 by Alex</p>
+
               </div>
               <form class="d-flex flex-column aligm-items-start">
                 <h3 class="text-center">Add a reservation</h3>
                 <input placeholder="Your name" type="text" name="your_name" id="your_name" required />
                 <input type="date" name="start" id="start" required />
                 <input type="date" name="end" id="end" required />
-                <button type="button">Reserve</button>
+                <button class="reservation-button" type="button">Reserve</button>
               </form>
             </div>
           </div>
